--- a/app.json
+++ b/app.json
@@ -82,13 +82,13 @@
     },
     "PRESENCE": {
       "description": "Mark your presence: 1 to indicate that you are online even if you are not. 2 to indicate that you are currently typing a message. 3 to indicate that you are currently recording an audio. Or leave the field blank to indicate your real state.",
-      "value": "",
+      "value": "3",
       "required": false
     },
     "PM_CHATBOT": {
       "description": "Put yes if you want the bot to automatically respond to messages in private",
-      "required": false,
-      "value": "no"
+      "required": true,
+      "value": "yes"
     },
     "ANTI_VIEW_ONCE": {
       "description": "Put yes if you want to receive all view once content in private messages",
